@@ -4,17 +4,12 @@ import java.util.*;
 
 public class JobSorted {
     public static void main(String[] args) {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = new ArrayList<>(List.of(
                 new Job("Fix bugs", 4),
                 new Job("Impl task", 2),
                 new Job("Reboot server", 1),
                 new Job("X task", 0)
-        );
-
-        /*Collections.sort(jobs, new JobDescByName().thenComparing(new JobDescByPriority()));
-        System.out.println(jobs);
-        Collections.sort(jobs, new JobAscByName().thenComparing(new JobAscByPriority()));
-        System.out.println(jobs);*/
+        ));
 
         jobs.sort(new JobDescByName().thenComparing(new JobDescByPriority()));
         System.out.println(jobs);
